--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/assets/basic.png" class="d-block" alt="...">
+            <img src="/assets/basic.png" class="d-block" alt="News Scraper">
             <div class="carousel-caption bg-dark d-none d-md-block">
               <h3>All the news, fit to scrape</h3>
               <h3><a href="https://github.com/codyclark2119/NewsScraper" class="m-2">Github Link</a>
@@ -78,19 +78,19 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/assets/basic1.png" class="d-block" alt="...">
+            <img src="/assets/basic1.png" class="d-block" alt="Class App">
             <div class="carousel-caption bg-dark d-none d-md-block">
               <h3>Class Registration App</h3>
-              <h5><a href="#" class="m-2">Github Link</a>
-              <a href="#"class="m-2">Project Link</a></h5>
+              <h5><a href="https://github.com/igorcweb/class-app" class="m-2">Github Link</a>
+              <a href="https://igorcweb-class-app.herokuapp.com"class="m-2">Project Link</a></h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/assets/basic2.png" class="d-block" alt="...">
+            <img src="/assets/basic2.png" class="d-block" alt="Fakazon">
             <div class="carousel-caption bg-dark d-none d-md-block">
               <h3>Fakazon E-Commerce App</h3>
-              <h5><a href="#" class="m-2">Github Link</a>
-              <a href="#"class="m-2">Project Link</a></h5>
+              <h5><a href="https://github.com/codyclark2119/fakazon2" class="m-2">Github Link</a>
+              <a href="#"class="m-2 disabled">Project Link</a></h5>
             </div>
           </div>>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -109,8 +109,7 @@
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">All the news..Fit to scrape!</h3>
-              <img src="/assets/basic.png" class="card-img" alt="...">
-              <h5 class="card-text">With supporting text below as a natural lead-in to additional content.</h5>
+              <img src="/assets/basic.png" class="card-img" alt="News Scraper">
               <div class="row">
                 <a href="https://github.com/codyclark2119/NewsScraper" class="btn btn-primary mx-auto" role="button">Go to the code!</a>
                 <a href="https://allthenewsyouneed.herokuapp.com/" class="btn btn-primary mx-auto" role="button">Project Link!</a>  
@@ -122,11 +121,10 @@
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">Fakazon E-Commerce App</h3>
-              <img src="/assets/basic1.png" class="card-img" alt="...">
-              <h5 class="card-text">With supporting text below as a natural lead-in to additional content.</h5>
+              <img src="/assets/basic1.png" class="card-img" alt="Fakazon">
               <div class="row">
-                <a href="https://github.com/codyclark2119/Fakazon" class="btn btn-primary mx-auto" role="button">Go to the code!</a>
-                <a href="#" class="btn btn-disabled mx-auto" role="button">Project Link!</a>  
+                <a href="https://github.com/codyclark2119/fakazon2" class="btn btn-primary mx-auto" role="button">Go to the code!</a>
+                <a href="#" class="btn btn-disabled mx-auto" role="button disabled">Project Link!</a>  
               </div>
             </div>
           </div>
@@ -135,11 +133,10 @@
             <div class="card">
               <div class="card-body">
                 <h3 class="card-title">Class Registration App</h3>
-                <img src="/assets/basic2.png" class="card-img" alt="...">
-                <h5 class="card-text">With supporting text below as a natural lead-in to additional content.</h5>
-                <div class="row">
-                  <a href="https://github.com/codyclark2119/NewsScraper" class="btn btn-primary mx-auto" role="button">Go to the code!</a>
-                  <a href="https://allthenewsyouneed.herokuapp.com/" class="btn btn-primary mx-auto" role="button">Project Link!</a>                
+                <img src="/assets/basic2.png" class="card-img" alt="Class App">
+                  <div class="row">
+                  <a href="https://github.com/igorcweb/class-app" class="btn btn-primary mx-auto" role="button">Go to the code!</a>
+                  <a href="https://igorcweb-class-app.herokuapp.com" class="btn btn-primary mx-auto" role="button">Project Link!</a>                
                 </div>
               </div>
             </div>
