--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="carousel-caption bg-dark d-none d-md-block">
               <h3>Fakazon E-Commerce App</h3>
               <h5><a href="https://github.com/codyclark2119/fakazon2" class="m-2">Github Link</a>
-              <a href="#"class="m-2 disabled">Project Link</a></h5>
+              <a href="https://fakazon.herokuapp.com/"class="m-2">Project Link</a></h5>
             </div>
           </div>>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -124,7 +124,7 @@
               <img src="/assets/basic1.png" class="card-img" alt="Fakazon">
               <div class="row">
                 <a href="https://github.com/codyclark2119/fakazon2" class="btn btn-primary mx-auto" role="button">Go to the code!</a>
-                <a href="#" class="btn btn-disabled mx-auto" role="button disabled">Project Link!</a>  
+                <a href="https://fakazon.herokuapp.com/" class="btn mx-auto" role="button">Project Link!</a>  
               </div>
             </div>
           </div>
