--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/assets/style.css" type="text/css">
+    <script src="https://kit.fontawesome.com/fa6f46c404.js" crossorigin="anonymous"></script>
     <title>Cody Clark</title>
   </head>
   <body>
@@ -17,10 +18,10 @@
             Check me out
           </a>
           <div class="dropdown-menu dropdown-menu-right text-center" aria-labelledby="contactDropdown">
-            <a href="https://github.com/codyclark2119" class="dropdown-item">Github</a>
-            <a href="https://www.linkedin.com/in/codyclark2119/" class="dropdown-item">LinkedIn</a>
-            <a href="mailto:cevanclark2119@gmail.com" class="dropdown-item">Email</a>
-            <a href="https://drive.google.com/file/d/1q8Kv1AQB0p_Iz6VZeqAszlURJlGJhydN/view?usp=sharing" class="dropdown-item">Resume</a>            
+            <a href="https://github.com/codyclark2119" class="fab fa-github dropdown-item"> Github</a>
+            <a href="https://www.linkedin.com/in/codyclark2119/" class="fab fa-linkedin dropdown-item"> LinkedIn</a>
+            <a href="mailto:cevanclark2119@gmail.com" class="fas fa-envelope-square dropdown-item"> Email</a>
+            <a href="https://drive.google.com/file/d/1q8Kv1AQB0p_Iz6VZeqAszlURJlGJhydN/view?usp=sharing" class="far fa-file dropdown-item"> Resume</a>
           </div>
         </div>
       </nav>      
