--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/style.css" type="text/css">
+  <link rel="stylesheet" href="assets/style.css" type="text/css">
   <script src="https://kit.fontawesome.com/fa6f46c404.js" crossorigin="anonymous"></script>
   <title>Cody Clark</title>
 </head>
 
 <body>
-  <header class="container mb-5">
-    <nav class="navbar navbar-expand text-white">
+  <header class="container mb-2">
+    <nav class="navbar navbar-expand text-white d-flex justify-content-between">
       <a href="/" class="navbar-brand text-white mr-auto">
         <h3>Cody Clark</h3>
       </a>
-      <nav class="navbar-nav dropdown">
+      <nav class="navbar-nav dropdown ">
         <a class="nav-link dropdown-toggle text-white" href="#" id="contactDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Check me out
         </a>
-        <nav class="dropdown-menu dropdown-menu-right text-center" aria-labelledby="contactDropdown">
+        <nav class="dropdown-menu dropdown-menu-end text-center" aria-labelledby="contactDropdown">
           <a href="https://github.com/codyclark2119" class="fab fa-github dropdown-item"> Github</a>
           <a href="https://www.linkedin.com/in/codyclark2119/" class="fab fa-linkedin dropdown-item"> LinkedIn</a>
           <a href="mailto:cevanclark2119@gmail.com" class="fas fa-envelope-square dropdown-item"> Email</a>
@@ -37,60 +37,81 @@
 
   <main class="container mb-2 pt-3 pb-5">
     <div class="row">
-      <section class="col-lg-4 col-md-9 p-3 mx-md-auto bio">
-        <figure class="container text-center">
-          <img src="/assets/IMG_45741.jpg" alt="Cody Clark" id="myImg" class="rounded-circle mb-3">
-          <p class="text-white">I am a full-stack web developer always looking for a challenge and a new outlet for my
-            creativity.</p>
-        </figure>
+      <section class="col-lg-4 col-md-9 p-3 mx-md-auto">
+        <div class="bio">
+          <figure class="container text-center">
+            <img src="assets/cody.jpg" alt="Cody Clark" id="myImg">
+            <p class="text-white px-5 pt-3">I am a full-stack web developer always looking for a challenge and a new
+              outlet for my
+              creativity.</p>
+          </figure>
+        </div>
+
       </section>
       <section class="col-lg-7 col-md-9 mt-md-5 mt-lg-0 mx-auto">
         <div class="container text-center">
           <h4>"Change is the law of life, and those who look only to the past or present are certain to miss the
             <strong>FUTURE</strong>."
-            <br>-John F. Kennedy</h4>
+            <br>-John F. Kennedy
+          </h4>
           <h3 class="mt-5">Tech I enjoy using:</h3>
           <figure class="container">
             <div class="row">
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/bootstrap.png" alt=""
-                  class="img-fluid rounded">
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/bootstrap.png"
+                  alt="Bootstrap" class="img-fluid rounded">
                 <p>Bootstrap</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/git.png" alt=""
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/git.png" alt="Git"
                   class="img-fluid rounded">
                 <p>Git</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/js.png" alt=""
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/js.png" alt="JavaScript"
                   class="img-fluid rounded">
                 <p>JavaScript</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/mongodb.png" alt=""
-                  class="img-fluid rounded">
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/mongodb.png"
+                  alt="MongoDB" class="img-fluid rounded">
                 <p>MongoDB</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/mysql.png" alt=""
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/mysql.png" alt="MySQL"
                   class="img-fluid rounded">
                 <p>MySQL</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/react.png" alt=""
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/react.png" alt="React js"
                   class="img-fluid rounded">
-                <p>React</p>
+                <p>React.js</p>
               </div><br>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/express.png" alt=""
-                  class="img-fluid rounded">
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/express.png"
+                  alt="Express js" class="img-fluid rounded">
                 <p>ExpressJS</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/node.png" alt=""
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/node.png" alt="Node js"
                   class="img-fluid rounded">
                 <p>NodeJS</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/mongoose.png" alt=""
-                  class="img-fluid rounded">
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/mongoose.png"
+                  alt="Mongoose" class="img-fluid rounded">
                 <p>Mongoose</p>
               </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center"><img src="/assets/skills/sequelize.png" alt=""
-                  class="img-fluid rounded">
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/sequelize.png"
+                  alt="Sequelize" class="img-fluid rounded">
                 <p>Sequelize</p>
+              </div>
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/java.png" alt="Java"
+                  class="img-fluid rounded">
+                <p>Java</p>
+              </div>
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/antlr.png" alt="Antlr"
+                  class="img-fluid rounded">
+                <p>Antlr</p>
+              </div>
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/python.png" alt="Python"
+                  class="img-fluid rounded">
+                <p>Python</p>
+              </div>
+              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/spring-boot.png"
+                  alt="Amazon Web Services" class="img-fluid rounded">
+                <p>Spring Boot</p>
               </div>
             </div>
           </figure>
@@ -102,44 +123,47 @@
 
   <section class="container project text-center mt-md-5 mt-2 pb-3 mb-5 mx-auto">
     <h1 class="project1">My Projects:</h1>
-    <figure id="myCarousel" class="carousel slide carousel-fade mx-auto" data-ride="carousel">
+    <figure id="myCarousel" class="carousel slide carousel-fade mx-auto" data-bs-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/assets/basic.png" class="d-block" alt="News Scraper">
+          <img src="assets/basic.png" class="d-block" alt="News Scraper">
           <div class="carousel-caption bg-dark d-none d-md-block">
             <h3>All the news, fit to scrape</h3>
             <h5><a href="https://github.com/codyclark2119/NewsScraper" class="m-2">Github Link</a>
-              <a href="https://allthenewsyouneed.herokuapp.com/" class="m-2">Project Link</a></h5>
+              <a href="https://allthenewsyouneed.herokuapp.com/" class="m-2">Project Link</a>
+            </h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/assets/basic1.png" class="d-block" alt="Class App">
+          <img src="assets/basic2.png" class="d-block" alt="Class App">
           <div class="carousel-caption bg-dark d-none d-md-block">
             <h3>Class Registration App</h3>
             <h5><a href="https://github.com/igorcweb/class-app" class="m-2">Github Link</a>
-              <a href="https://igorcweb-class-app.herokuapp.com" class="m-2">Project Link</a></h5>
+              <a href="https://igorcweb-class-app.herokuapp.com" class="m-2">Project Link</a>
+            </h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/assets/basic2.png" class="d-block" alt="Fakazon">
+          <img src="assets/basic1.png" class="d-block" alt="Fakazon">
           <div class="carousel-caption bg-dark d-none d-md-block">
             <h3>Fakazon E-Commerce App</h3>
             <h5><a href="https://github.com/codyclark2119/fakazon2" class="m-2">Github Link</a>
-              <a href="https://fakazon.herokuapp.com/" class="m-2">Project Link</a></h5>
+              <a href="https://fakazon.herokuapp.com/" class="m-2">Project Link</a>
+            </h5>
           </div>
         </div>>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <a class="carousel-control-prev" data-bs-target="#myCarousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+          <span class="sr-only"></span>
         </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <a class="carousel-control-next" data-bs-target="#myCarousel" role="button" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only"></span>
         </a>
       </div>
     </figure>
@@ -150,7 +174,7 @@
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">All the news..Fit to scrape!</h3>
-          <img src="/assets/basic.png" class="card-img" alt="News Scraper">
+          <img src="assets/basic.png" class="card-img" alt="News Scraper">
           <div class="row">
             <a href="https://github.com/codyclark2119/NewsScraper" class="btn btn-primary mx-auto" role="button">Go to
               the code!</a>
@@ -164,7 +188,7 @@
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">Fakazon E-Commerce App</h3>
-          <img src="/assets/basic1.png" class="card-img" alt="Fakazon">
+          <img src="assets/basic1.png" class="card-img" alt="Fakazon">
           <div class="row">
             <a href="https://github.com/codyclark2119/fakazon2" class="btn btn-primary mx-auto" role="button">Go to the
               code!</a>
@@ -177,7 +201,7 @@
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">Class Registration App</h3>
-          <img src="/assets/basic2.png" class="card-img" alt="Class App">
+          <img src="assets/basic2.png" class="card-img" alt="Class App">
           <div class="row">
             <a href="https://github.com/igorcweb/class-app" class="btn btn-primary mx-auto" role="button">Go to the
               code!</a>
@@ -188,15 +212,11 @@
       </div>
     </figure>
   </section>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
     crossorigin="anonymous"></script>
 </body>
 
