Basic layout updates and inital mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </nav>
     <div class="collapse" id="navbarToggleExternalContent">
-      <div class="background-p1 p-4 text-center d-flex justify-content-around">
+      <div class="background-p1 p-4 text-center d-md-flex justify-content-md-around">
         <h5 class="h4"></h5>
         <h5 class="text-white h4"><a href="#bio" class="links-nav">Bio</a></h5>
         <h5 class="text-white h4"><a href="#technical-skills" class="links-nav">Technical Skills</a></h5>
@@ -41,12 +41,8 @@
   <main>
     <div class="container-fluid background-p1 py-5 container-p1 ">
       <div class="row page-load ">
-        <section class="col-lg-3 col-md-9 p-3 mx-md-auto">
-          <div class="bio">
-            <figure class="container text-center ">
-              <img src="assets/cody.jpg" alt="Cody Clark" id="myImg">
-            </figure>
-          </div>
+        <section class="col-lg-3 col-md-9 p-3 mx-md-auto bio d-flex justify-content-center">
+            <img src="assets/cody.jpg" alt="Cody Clark" id="myImg">
         </section>
         <span class="col-lg-4 align-self-center">
           <h3>"Change is the law of life, and those who look only to the past or present are certain to miss the
@@ -58,7 +54,7 @@
       </div>
     </div>
 
-    <div class="parallax" id="bio"></div>
+    <div class="parallax-2" id="bio"></div>
 
     <div class="container-fluid background-p1 py-5 container-p1" >
       <div class="row page-load ">
@@ -71,9 +67,9 @@
       </div>
     </div>
 
-    <div class="parallax"></div>
+    <div class="parallax-2" id="technical-skills"></div>
 
-    <div class="container-fluid background-p1 py-5 container-p1" id="technical-skills">
+    <div class="container-fluid background-p1 py-5 container-p1" >
       <div class="row page-load ">
         <span class="col-lg-1"></span>
         <div class="col-lg-10">
@@ -84,13 +80,13 @@
       </div>
     </div>
 
-    <div class="parallax"></div>
+    <div class="parallax-2" id="interests"></div>
 
-    <div class="container-fluid background-p1 py-5 container-p1" id="intrests">
+    <div class="container-fluid background-p1 py-5 container-p1" >
       <div class="row page-load ">
         <span class="col-lg-1"></span>
         <div class="col-lg-10">
-          <h4><strong>Intrests:</strong></h4>
+          <h4><strong>interests:</strong></h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
         </div>
         <span class="col-lg-1"></span>
