Update index with new resume

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h5 class="text-white py-md-0 py-3 h4"><a href="#bio" class="links-nav">Bio</a></h5>
         <h5 class="text-white py-md-0 py-3 h4"><a href="#technical-skills" class="links-nav">Technical Skills</a></h5>
         <h5 class="text-white py-md-0 py-3 h4"><a href="#interests" class="links-nav">Intrests</a></h5>
-        <h5 class="text-white py-md-0 py-3 h4"><a href="https://docs.google.com/document/d/1yq5KqthdOTDjO1xxtWX2nn3Q7rqXcSRsY7I_9wMJ7Qk/edit?usp=sharing" class="links-nav">Resume</a></h5>
+        <h5 class="text-white py-md-0 py-3 h4"><a href="https://drive.google.com/file/d/16yDVp1E8EjfHsraCUot-wFjOMaBgXllw/view?usp=sharing" class="links-nav">Resume</a></h5>
         <h5 class="text-white py-md-0 py-3 h4"><a href="https://www.linkedin.com/in/codyclark2119/" class="links-nav">LinkedIn</a></h5>
         <h5 class="h4"></h5>
       </div>
@@ -100,7 +100,7 @@
         <span class="col-lg-1"></span>
         <div class="col-lg-10 text-center">
           <h4><strong>interests:</strong></h4>
-          <p>Gaming (Video games, Card games, and Roleplaying games), Making Music, Cooking, Playing with my Pets (Emma - Sheep, Duke Zeke and Maple - Dogs, and Nekomamushi - Cat), Reading Books (Manga, Sci-Fi, and Fantasy) and Going on walks with my Wife!</p>
+          <p>Gaming (Video games, Card games, and Roleplaying games), Making Music, Cooking, Playing with my Pets (Emma - Sheep, Duke and Zeke - Dogs, and Nekomamushi and Gray - Cats), Reading Books (Manga, Sci-Fi, and Fantasy) and Going on walks with my Wife and Son!</p>
         </div>
         <span class="col-lg-1"></span>
       </div>
